--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -1582,6 +1582,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the library\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2333, 69), (1000, 69), (2333,), (1000,))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split the dataset into features and target variable\n",
+    "X = data.drop(columns = [\"churn\"], axis = 1)\n",
+    "y = data[\"churn\"] \n",
+    "\n",
+    "# Splitting data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size = 0.3, random_state = 42, stratify = y) \n",
+    "\n",
+    "# stratify ensures the split maintains the same class imbalance as the original dataset.\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before SMOTE: churn\n",
+      "0    1995\n",
+      "1     338\n",
+      "Name: count, dtype: int64\n",
+      "After SMOTE: churn\n",
+      "0    1995\n",
+      "1    1995\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "smote = SMOTE(random_state = 42)\n",
+    "# Fit and resample training data\n",
+    "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "#Check our new distribution\n",
+    "print(\"Before SMOTE:\", y_train.value_counts())\n",
+    "print(\"After SMOTE:\", y_train_res.value_counts())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
