--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1347,11 +1347,13 @@
        "      <th>total intl calls</th>\n",
        "      <th>total intl charge</th>\n",
        "      <th>customer service calls</th>\n",
+       "      <th>churn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>3333.000000</td>\n",
        "      <td>3333.000000</td>\n",
        "      <td>3333.000000</td>\n",
        "      <td>3333.000000</td>\n",
@@ -1385,6 +1387,7 @@
        "      <td>4.479448</td>\n",
        "      <td>2.764581</td>\n",
        "      <td>1.562856</td>\n",
+       "      <td>0.144914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -1403,6 +1406,7 @@
        "      <td>2.461214</td>\n",
        "      <td>0.753773</td>\n",
        "      <td>1.315491</td>\n",
+       "      <td>0.352067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1417,6 +1421,7 @@
        "      <td>23.200000</td>\n",
        "      <td>33.000000</td>\n",
        "      <td>1.040000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -1439,6 +1444,7 @@
        "      <td>3.000000</td>\n",
        "      <td>2.300000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1457,6 +1463,7 @@
        "      <td>4.000000</td>\n",
        "      <td>2.780000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1475,6 +1482,7 @@
        "      <td>6.000000</td>\n",
        "      <td>3.270000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1493,6 +1501,7 @@
        "      <td>20.000000</td>\n",
        "      <td>5.400000</td>\n",
        "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1539,24 +1548,23 @@
        "75%             10.590000           12.100000          6.000000   \n",
        "max             17.770000           20.000000         20.000000   \n",
        "\n",
-       "       total intl charge  customer service calls  \n",
-       "count        3333.000000             3333.000000  \n",
-       "mean            2.764581                1.562856  \n",
-       "std             0.753773                1.315491  \n",
-       "min             0.000000                0.000000  \n",
-       "25%             2.300000                1.000000  \n",
-       "50%             2.780000                1.000000  \n",
-       "75%             3.270000                2.000000  \n",
-       "max             5.400000                9.000000  "
+       "       total intl charge  customer service calls        churn  \n",
+       "count        3333.000000             3333.000000  3333.000000  \n",
+       "mean            2.764581                1.562856     0.144914  \n",
+       "std             0.753773                1.315491     0.352067  \n",
+       "min             0.000000                0.000000     0.000000  \n",
+       "25%             2.300000                1.000000     0.000000  \n",
+       "50%             2.780000                1.000000     0.000000  \n",
+       "75%             3.270000                2.000000     0.000000  \n",
+       "max             5.400000                9.000000     1.000000  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "# checking out for outliers\n",
     "data.describe()"
    ]
@@ -1591,10 +1599,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the object column we sgall work on conducting modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value counts before encoding:\n",
+      "churn\n",
+      "False    2850\n",
+      "True      483\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Value counts before encoding:\")\n",
+    "print(data['churn'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import libraries\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value counts after encoding:\n",
+      "churn\n",
+      "0    2850\n",
+      "1     483\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_encoder = LabelEncoder() # create an instance of Label Encoder\n",
+    "data[\"churn\"] = label_encoder.fit_transform(data[\"churn\"]) # Fit and transform the target variable\n",
+    "\n",
+    "# Check the counts after encoding\n",
+    "print(\"Value counts after encoding:\")\n",
+    "print(data['churn'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3333, 18)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#one hot encoding\n",
+    "\n",
+    "data = pd.get_dummies(data, columns = [\"international plan\", \"voice mail plan\"], drop_first = True)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3333, 18)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split the data set into \n",
+    "#Features\n",
+    "X = data.drop(\"churn\", axis=1)\n",
+    "#Target\n",
+    "y = data[\"churn\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#splitting data into test and training sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before SMOTE: churn\n",
+      "0    1995\n",
+      "1     338\n",
+      "Name: count, dtype: int64\n",
+      "After SMOTE: churn\n",
+      "0    1995\n",
+      "1    1995\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# stratify ensures the split maintains the same class imbalance as the original dataset\n",
+    "smote = SMOTE(random_state=42)\n",
+    "# Fit and training data\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "print(\"Before SMOTE:\", y_train.value_counts())\n",
+    "print(\"After SMOTE:\", y_train_resampled.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import all necessary libraries\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
