--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -840,18 +840,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_1832\\2993871208.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data[\"international plan\"] = data[\"international plan\"].replace({\"yes\": 1, \"no\": 0})\n",
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_1832\\2993871208.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data[\"voice mail plan\"] = data[\"voice mail plan\"].replace({\"yes\": 1, \"no\": 0})\n",
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_1832\\2993871208.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data[\"churn\"] = data[\"churn\"].replace({True: 1, False: 0})\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1065,6 +1053,7 @@
    ],
    "source": [
     "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "# Convert 'yes'/'no' to 1/0\n",
     "data[\"international plan\"] = data[\"international plan\"].replace({\"yes\": 1, \"no\": 0})\n",
     "data[\"voice mail plan\"] = data[\"voice mail plan\"].replace({\"yes\": 1, \"no\": 0})\n",
@@ -1077,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1123,17 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sns.pairplot(data, hue='churn', diag_kind='kde', plot_kws={'alpha': 0.5})\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1310,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
