--- a/customer_churn.ipynb
+++ b/customer_churn.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "71f7834a",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6c528add",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "82886f28",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "11de6131",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "(3333, 21)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bd84b098",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "08a4d6bb",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5eddadbe",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "94265054",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "503e1420",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "1ac8f116",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "4aa4c86a",
    "metadata": {},
    "outputs": [
@@ -1944,7 +1944,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "5ef8cda4",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "14f3a748",
    "metadata": {},
    "outputs": [
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "a8ec2ed9",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "80535c99",
    "metadata": {},
    "outputs": [],
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "2853471f",
    "metadata": {},
    "outputs": [
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "b91bf707",
    "metadata": {},
    "outputs": [
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "137e3aef",
    "metadata": {},
    "outputs": [
@@ -2234,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "0e980311",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "c9647305",
    "metadata": {},
    "outputs": [
@@ -2310,7 +2310,7 @@
        "LogisticRegression(max_iter=1000, random_state=42)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "daca6c22",
    "metadata": {},
    "outputs": [],
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "52a549ed",
    "metadata": {},
    "outputs": [
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "id": "48ee6ce7",
    "metadata": {},
    "outputs": [
@@ -2445,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "id": "3cee8cf1",
    "metadata": {},
    "outputs": [
@@ -2455,7 +2455,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "id": "ce1ff871",
    "metadata": {},
    "outputs": [],
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "id": "372f9b31",
    "metadata": {},
    "outputs": [
@@ -2534,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "83555691",
    "metadata": {},
    "outputs": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "id": "f90d892d",
    "metadata": {},
    "outputs": [
@@ -2600,7 +2600,7 @@
        "DecisionTreeClassifier(random_state=42)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2615,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "d6128a38",
    "metadata": {},
    "outputs": [],
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "id": "c7c21b67",
    "metadata": {},
    "outputs": [
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "id": "45f086f0",
    "metadata": {},
    "outputs": [
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 53,
    "id": "0b174253",
    "metadata": {},
    "outputs": [
@@ -2745,7 +2745,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2758,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "id": "385ea877",
    "metadata": {},
    "outputs": [],
@@ -2777,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "id": "ee9497a6",
    "metadata": {},
    "outputs": [
@@ -2822,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "id": "2f33ea22",
    "metadata": {},
    "outputs": [
@@ -2894,7 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 57,
    "id": "43914b9c",
    "metadata": {},
    "outputs": [
@@ -2936,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "9ecd5de7",
    "metadata": {},
    "outputs": [
@@ -2963,6 +2963,7 @@
     "plt.xlabel(\"Models\")\n",
     "plt.xticks(rotation = 45)\n",
     "plt.legend(loc = \"lower right\")\n",
+    "plt.savefig('Images/metrics.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -2992,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "d2194156",
    "metadata": {},
    "outputs": [
@@ -3037,6 +3038,7 @@
     "plt.ylabel(\"True Positive Rate\")\n",
     "plt.title(\"ROC Curve Comparison\")\n",
     "plt.legend()\n",
+    "plt.savefig('Images/roc.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -3066,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "id": "8a8abb67",
    "metadata": {},
    "outputs": [
@@ -3082,8 +3084,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=-1)]: Done  48 out of  48 | elapsed:   10.6s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   15.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  48 out of  48 | elapsed:   21.4s finished\n"
      ]
     },
     {
@@ -3132,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 61,
    "id": "99aa6b91",
    "metadata": {},
    "outputs": [],
@@ -3155,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 62,
    "id": "07dd76fa",
    "metadata": {},
    "outputs": [
@@ -3176,6 +3178,7 @@
     "Importance = pd.DataFrame({\"Importance\": rf_model.feature_importances_ * 100}, index=X_train_full.columns)\n",
     "Importance.sort_values(by=\"Importance\", axis=0, ascending=True).tail(15).plot(kind=\"barh\", color=\"r\", figsize=(9, 5))\n",
     "plt.title(\"Feature Importance Levels\")\n",
+    "plt.savefig('Images/features.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -3189,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 63,
    "id": "03c6f116",
    "metadata": {},
    "outputs": [
@@ -3231,7 +3234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 64,
    "id": "c1e53025",
    "metadata": {},
    "outputs": [
