--- a/customer_churn.ipynb
+++ b/customer_churn.ipynb
@@ -1617,7 +1617,7 @@
    "id": "fd07e31b",
    "metadata": {},
    "source": [
-    "Churn vs Customer service calls "
+    "**Churn vs Customer service calls**"
    ]
   },
   {
@@ -1664,7 +1664,7 @@
    "id": "3ac9ee98",
    "metadata": {},
    "source": [
-    "Account length vs Churn"
+    "**Account length vs Churn**"
    ]
   },
   {
@@ -1709,7 +1709,7 @@
    "id": "2bcfea16",
    "metadata": {},
    "source": [
-    "International and voicemail plan vs Churn"
+    "**International and voicemail plan vs Churn**"
    ]
   },
   {
@@ -1792,7 +1792,7 @@
    "id": "6dca030d",
    "metadata": {},
    "source": [
-    "Churn vs charges"
+    "**Churn vs charges**"
    ]
   },
   {
@@ -1829,6 +1829,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1dd3928d",
+   "metadata": {},
+   "source": [
+    "The total day charge shows that most customers that have high spending churn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d37b5686",
    "metadata": {},
    "source": [
@@ -1841,7 +1849,7 @@
    "id": "3fc2254c",
    "metadata": {},
    "source": [
-    "Correlation Heatmap"
+    "**Correlation Heatmap**"
    ]
   },
   {
@@ -2073,7 +2081,7 @@
    "id": "98e3b4eb",
    "metadata": {},
    "source": [
-    "#### 3.5.3 One-Hot Encoding and Data scaling\n",
+    "#### 3.5.3 One-Hot Encoding \n",
     "One-hot encoding is a method to convert categorical data into a numeric format that machine learning models can use.\n",
     "\n",
     "In this section, we will perform one-hot encoding on the following columns: `state`, `area_code`, `international_plan`, and `voice_mail_plan`."
@@ -3276,7 +3284,7 @@
    "id": "2d47da2a",
    "metadata": {},
    "source": [
-    "### 5.4 Findings "
+    "### 5.4 Findings and Recommendations"
    ]
   },
   {
@@ -3292,7 +3300,7 @@
    "id": "218c0bd5",
    "metadata": {},
    "source": [
-    "Key Findings\n",
+    "**Key Findings**\n",
     "1. Model Performance:\n",
     "\n",
     " - The Random Forest classifier was identified as the superior model for this task, achieving 91% accuracy and A recall of 71%. This confirms the model is not only highly accurate but also excellent at ranking customers by their risk of churning.\n",
@@ -3317,7 +3325,7 @@
    "id": "ad6c3021",
    "metadata": {},
    "source": [
-    "### 5.5 Recommendations"
+    "**Recommendations**"
    ]
   },
   {
@@ -3335,6 +3343,34 @@
     "\n",
     "4. For International Plan Subscribers, conduct a competitive analysis of international plans. Proactively communicate with these customers to ensure plan satisfaction and consider value-added perks.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc8e1184",
+   "metadata": {},
+   "source": [
+    "**Limitations & Future Work**\n",
+    "\n",
+    "1. Data imbalance: Despite using SMOTE and class weights, the dataset still had fewer churn cases than non-churn, which can limit model generalization.\n",
+    "\n",
+    "2. Feature limitations: The dataset did not include customer demographics e.g age, income that could provide a deeper understanding of churn behavior.\n",
+    "\n",
+    "3. Model deployment: The project remains at the analysis stage; deploying the model in a real-time environment would be the next practical step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a449a2",
+   "metadata": {},
+   "source": [
+    "**Next Steps:**\n",
+    "\n",
+    "1. Deploy the Random Forest model into Syriatel’s  system for real-time churn prediction.\n",
+    "\n",
+    "2. Use model insights to personalize offers and promotions.\n",
+    "\n",
+    "3. Track the effectiveness of retention strategies and refine them based on customer feedback and model updates."
    ]
   },
   {
