--- a/customer_churn.ipynb
+++ b/customer_churn.ipynb
@@ -52,7 +52,7 @@
     "\n",
     " - To analyze the impact of customer demographics  on churn.\n",
     "\n",
-    " - To examine the effect of account details (e.g., account length) on churn.\n",
+    " - To examine the effect of account details  on churn.\n",
     "\n",
     " - To assess how subscription plans influence churn.\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "1. How do customer demographics  affect churn?\n",
     "\n",
-    "2. How do account details (e.g., account length) influence churn?\n",
+    "2. How do account details  influence churn?\n",
     "\n",
     "3. How do subscription plans impact churn?\n",
     "\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "71f7834a",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6c528add",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "82886f28",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "11de6131",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "(3333, 21)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bd84b098",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "08a4d6bb",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5eddadbe",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9300b2ce",
    "metadata": {},
    "outputs": [
@@ -812,7 +812,7 @@
        "max             5.400000                9.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "da08466b",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "(3333, 20)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d771cb18",
    "metadata": {},
    "outputs": [
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "91763d99",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "86a86aa5",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "87009fd3",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "df5128dc",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1123,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "46611870",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4edc3538",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ad93a6bd",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "26b95d2d",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2390c406",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "cf51c2c7",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "6a9c5a54",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "aa2ccedc",
    "metadata": {},
    "outputs": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "33dc4db6",
    "metadata": {},
    "outputs": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "856acdfa",
    "metadata": {},
    "outputs": [
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "9d4eec72",
    "metadata": {},
    "outputs": [
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "03e0603f",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "c7945655",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "94265054",
    "metadata": {},
    "outputs": [
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "503e1420",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "1ac8f116",
    "metadata": {},
    "outputs": [
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "4aa4c86a",
    "metadata": {},
    "outputs": [
@@ -1952,7 +1952,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "5ef8cda4",
    "metadata": {},
    "outputs": [
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "14f3a748",
    "metadata": {},
    "outputs": [
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "a8ec2ed9",
    "metadata": {},
    "outputs": [],
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "80535c99",
    "metadata": {},
    "outputs": [],
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "2853471f",
    "metadata": {},
    "outputs": [
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "b91bf707",
    "metadata": {},
    "outputs": [
@@ -2183,6 +2183,17 @@
     "print(f\"Shape of scaled training numerical features: {X_train_scaled_df.shape}\")\n",
     "print(f\"Shape of scaled test numerical features: {X_test_scaled_df.shape}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "de3fdfea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the modified DataFrame to a new csv file\n",
+    "data.to_csv(\"encoded.csv\", index = False)\n"
    ]
   },
   {
@@ -3092,8 +3103,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   15.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  48 out of  48 | elapsed:   21.4s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   10.9s\n",
+      "[Parallel(n_jobs=-1)]: Done  48 out of  48 | elapsed:   15.4s finished\n"
      ]
     },
     {
@@ -3380,7 +3391,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This project analyzed the SyriaTel customer churn dataset to understand factors driving customer churn and to build a predictive model. After conducting data cleaning and exploratory analysis, key patterns and relationships were identified in usage and service features. A Random Forest classifier was developed and optimized using GridSearchCV, achieving 91% accuracy and a recall of 0.771. Feature importance analysis highlighted Total Day Charges, Customer Service Calls, International Plan, and Total Evening Charges as the main drivers of churn. The model reliably identifies most at-risk customers, enabling targeted retention efforts that can reduce revenue loss. Overall, this analysis provides actionable insights and a robust predictive tool to guide business strategies for customer retention.\n"
+    "This project analyzed the SyriaTel customer churn dataset to understand factors driving customer churn and to build a predictive model. After conducting data cleaning and exploratory analysis, key patterns and relationships were identified in usage and service features. A Random Forest classifier was developed and optimized using GridSearchCV, achieving 91% accuracy and a recall of 0.71. Feature importance analysis highlighted Total Day Charges, Customer Service Calls and International Plan as the main drivers of churn. The model reliably identifies most at-risk customers, enabling targeted retention efforts that can reduce revenue loss. Overall, this analysis provides actionable insights and a robust predictive tool to guide business strategies for customer retention.\n"
    ]
   }
  ],
